--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "halal-homestead",
-  "homepage": "https://maajidhusain.github.io/halalhomestead",
+  "homepage": "https://maajidhusain.github.io/halalhomestead.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
